--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-swiper": "^0.1.5",
+    "react-typed": "^2.0.12",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
